Fix help-text alignment for HTML plugin
In a PlaceholderField fieldset with `plugin-holder` class, the labels
are hidden. but the help-text was moved because the plugin is used a
`.aligned` frame.

--- a/fluent_contents/static/fluent_contents/admin/cp_admin.css
+++ b/fluent_contents/static/fluent_contents/admin/cp_admin.css
@@ -130,6 +130,11 @@ body.cp-single-placeholder #tab-orphaned .cp-item-move { display: inline; }  /* 
   display: none;
 }
 
+form .form-row.no-labels p.help {
+  padding-left: 0;
+  margin-left: 0;
+}
+
 
 /* ---- Inline header fixes ---- */
 
